--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-.container {
-  /*max-width: 500px;
-  margin: auto;*/
-}
 .nav-font {
   font-family: monospace;
 }
@@ -11,9 +7,20 @@
 .link-font {
   font-size: 1.2em;
 }
-
+.grey-bckground {
+  background-color: #e1e1e4;
+  border-radius: 25px;
+  padding: 2em 0;
+}
+.flex-container-center {
+  display: flex;
+  justify-content: center;
+}
 .flex-column {
   flex-direction: column;
+}
+.align-center {
+  text-align: center;
 }
 .margin-bt {
   margin-bottom: 3.5em;
